# rustdb

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: buffer.rs  catalog.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs  txn.rs  wal.rs
src/query/: mod.rs
src/storage/: btree.rs  heap.rs  mod.rs  page.rs  row.rs
tests/: integration.rs
